@@ -56,7 +56,7 @@ public enum eProp {
 
     public static String password = "*";
     public static String role = null;
-    public static Locale locale = new Locale("ru", "RU");
+    public static Locale locale = Locale.of("ru", "RU");
     public static String fb = "fb";
     public static boolean dev = false;      //признак разработки и тестирования
     public static boolean locate = true;    //координаты фрейма разработки и тестирования
